--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,1 +1,15 @@
-<p>top page</p>
+<main>
+  <div class="fixed-bg bg-1">
+    <h1 class="main-text0">中級者(中国語検定2級程度)対象</h1>
+    <h2 class="main-text1">中国語文法・語法</h2>
+    <h3 class="main-text2">下へスクロールしてください</h3>
+  </div>
+
+  <div class="fixed-bg bg-2">
+      <h4 class="text-box1">中国語の文法・語法を<br>より正確に理解したい方へ</h4>
+  </div>
+
+
+  <div class="fixed-bg bg-3">
+  </div>
+</main>
