--- a/app/assets/stylesheets/scores/index.css.erb
+++ b/app/assets/stylesheets/scores/index.css.erb
@@ -88,3 +88,22 @@ body {
 .bg-3 {
   background-image: url(<%= asset_path('design13.png') %>);
 }
+
+.favorite-btn1 {
+  display: inline;
+  border-radius: 30px;
+  color: black;
+  padding: 30px;
+  font-size: 15px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 50px;
+  opacity: 0.85;
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+}
+  
+.favorite-btn1:hover {
+  background: linear-gradient(#c1faa4, #58ee6c);
+  color: black;
+  padding: 50px;
+}
