--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -11,5 +11,6 @@
 
 
   <div class="fixed-bg bg-3">
+  <%= link_to '問題を解いてみる', new_score_path, method: :get, class: "favorite-btn1" %>
   </div>
 </main>
