匿名チャット機能実装

--- a/app/assets/stylesheets/scores/index.css.erb
+++ b/app/assets/stylesheets/scores/index.css.erb
@@ -90,6 +90,25 @@ body,html,main
   padding: 50px;
 }
 
+.favorite-btn2 {
+  display: inline;
+  border-radius: 30px;
+  color: black;
+  padding: 30px 10px;
+  font-size: 15px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 50px;
+  opacity: 0.85;
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+}
+
+.favorite-btn2:hover {
+  background: linear-gradient(#c1faa4, #58ee6c);
+  color: black;
+  padding: 50px;
+}
+
 .favorite-btn3 {
   display: inline;
   border-radius: 30px;
