匿名チャット機能デザイン修正

--- a/app/assets/stylesheets/posts/posts.css.erb
+++ b/app/assets/stylesheets/posts/posts.css.erb
@@ -5,10 +5,9 @@
   margin-left: 400px;
   border-radius: 30px;
   color: black;
-  border: 5px solid rgb(155, 248, 142);
   font-size: 20px;
   text-align: center;
-  background: linear-gradient(#4ef4f7, #6957f5);
+  background: linear-gradient(#b6eaeb, #b9b1f5);
   }
   
   .post-date{
@@ -26,18 +25,10 @@
     opacity: 0.8;
   }
 
-  .form{
-    
-  }
-
   .box{
     height: 50px;
     width:300px; 
     border-radius: 20px;
-  }
-
-  .search-form{
-   
   }
 
   .search-input{
