問題・得点機能デザイン修正②

--- a/app/assets/stylesheets/scores/new.css
+++ b/app/assets/stylesheets/scores/new.css
@@ -36,9 +36,7 @@ div.is-visible {
   background: linear-gradient(#d6dadb, #434546);
   opacity: 0.77;
   text-align: center;
-    
   font-weight: bold;
-  cursor: pointer;
   transition: all 0.3s ease 0s;
 }
 
@@ -99,12 +97,13 @@ div.is-visible {
   margin-top: 12px;
   border-radius: 20px;
   background: linear-gradient(#ebedf3, #6b6686);
+  transition: all 0.3s ease 0s;
 }
 
 .questionChoice:hover {
-  background: linear-gradient(#e2eedb, #676d68);
+  background: linear-gradient(#828381, #373837);
   color: black;
-  padding: 30px;
+  padding: 10px;
 }
 
 .reset{
