--- a/app/assets/stylesheets/scores/new.css.erb
+++ b/app/assets/stylesheets/scores/new.css.erb
@@ -1,12 +1,14 @@
 .all{
-    min-width: 800px;
-    width: 100vw;
-    height: 100vh;
+    background-size:100% auto;/*この場合は高さが自動設定*/
+  
     background-color: #f5f5f5;
     display: flex;
     justify-content: center;
     background-image: url(<%= asset_path('design15.png') %>);
-    background-size: 100% auto;
+    background-size: cover !important; 
+    background-attachment: fixed;
+    background-position: center;
+    padding-bottom: calc(100%*1365/2048);
 }
 
 ul,li {
@@ -28,22 +30,28 @@ div.is-visible {
 
 
 .btnstart{
-  border-radius: 40px;
+  border-radius: 100px;
   color: black;
-  margin-top: 100px;
-  padding: 50px;
-  font-size: 20px;
+  margin-top: 200px;
+  padding: 100px;
+  font-size: 35px;
   background: linear-gradient(#d6dadb, #434546);
   opacity: 0.77;
   text-align: center;
   font-weight: bold;
   transition: all 0.3s ease 0s;
+  
+}
+
+.top{
+  height:0vh;
+  width: 100vw;
 }
 
 .btnstart:hover {
   background: linear-gradient(#f8fdf5, #c2f5c9);
   color: black;
-  padding: 55px;
+  padding: 120px;
 }
 
 .game {
@@ -67,9 +75,8 @@ div.is-visible {
 
 .result {
   display: none;
-  display: flex;
-  justify-content: space-between;
   color: white;
+  height: 10vh
 }
 
 .screen {
@@ -80,7 +87,7 @@ div.is-visible {
   color: linear-gradient(#e2eedb, #676d68);
 }
 
-.listAnswer {
+#listAnswer {
   margin-top: 24px;
 }
 
@@ -107,14 +114,23 @@ div.is-visible {
 }
 
 .reset{
-  text-align: center;
-  border-radius: 20px;
-  background: linear-gradient(#d6dadb, #434546);
-  font-size: 18px;
-  font-weight: bold;
-  color: white;
-  margin-top: 150px;
-  padding: 17px 95px;
+  display: inline;
+  border-radius: 30px;
+  color: black;
+  padding: 35px 70px;
+  border: 2.5px solid rgb(53, 52, 52);
+  font-size: 15px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 105px;
+  opacity: 0.85;
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+}
+
+.reset:hover {
+  background: linear-gradient(#c1faa4, #58ee6c);
+  color: black;
+  padding: 60px 90px;
 }
 
 .new-score-form{
@@ -126,12 +142,97 @@ div.is-visible {
 }
 
 .ranking{
-    text-align: center;
-    border-radius: 20px;
-    background: linear-gradient(#d6dadb, #434546);
-    font-size: 20px;
-    font-weight: bold;
-    color: #FFF;
-    padding: 2vh 2vw;
-    margin-top: 50px;
+  display: inline;
+  border-radius: 30px;
+  color: black;
+  padding: 30px;
+  font-size: 15px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 130px;
+  margin-bottom: 20px;
+  opacity: 0.85;
+  cursor: pointer;
+  transition: all 0.5s ease 0s;
+}
+
+.ranking:hover {
+  background: linear-gradient(#c1faa4, #58ee6c);
+  color: black;
+  padding: 60px;
+}
+
+.commentary{
+  display: none;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
+
+.btncommentary{
+  text-align: center;
+  border-radius: 20px;
+  background: linear-gradient(#d6dadb, #434546);
+  font-size: 18px;
+  color: white;
+  padding: 50px 70px;
+  transition: all 0.3s ease 0s;
+}
+
+.btncommentary:hover {
+  background: linear-gradient(#f8fdf5, #c2f5c9);
+  color: black;
+  padding: 60px;
+}
+
+
+.checkscore{
+  text-align: center;
+  border-radius: 20px;
+  background: linear-gradient(#d6dadb, #434546);
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  margin-top: 150px;
+  padding: 50px 70px;
+  margin-bottom: 30px;
+}
+
+.explaination1{
+  margin-top: 12px;
+  border-radius: 20px;
+  background: linear-gradient(#ebedf3, #6b6686);
+  transition: all 0.3s ease 0s;
+  color: black;
+}
+
+.explaination2{
+  margin-top: 12px;
+  border-radius: 20px;
+  background: linear-gradient(#ebedf3, #6b6686);
+  transition: all 0.3s ease 0s;
+  color: black;
+  margin-bottom: 25px;
+}
+
+.explaination3{
+  margin-top: 12px;
+  border-radius: 20px;
+  background: linear-gradient(#ebedf3, #6b6686);
+  transition: all 0.3s ease 0s;
+  color: black;
+  margin-bottom: 100px;
+  position:relative;
+}
+
+.explain-title{
+  border-radius: 100px;
+  width: 600px;
+  color: rgb(4, 241, 123);
+  font-size: 35px;
+  text-align: center;
+  background: linear-gradient(#18acb1, #2a17bb);
+  opacity: 0.85;
+  display: block;
+  margin-left: 55px;
+  margin-bottom: 20px;
 }
