レスポンシブ機能実装

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
   </div>
   
   <div class='register-btn'>
-    <%= f.submit "会員登録" ,class:"register-red-btn" %>
+    <%= f.submit "ユーザー登録" ,class:"register-red-btn" %>
   </div>
 </div>
 <% end %>
