--- a/app/assets/stylesheets/scores/all.css.erb
+++ b/app/assets/stylesheets/scores/all.css.erb
@@ -63,5 +63,69 @@
   text-align: center;
   margin-left: 750px;
   margin-top: 10px;
-
   }
+
+ /* スマホ表示時 */
+@media (max-width: 599px) {
+
+   .ranking-page{
+     background-image: url(<%= asset_path('design11.png') %>);
+  background-size: cover !important; 
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+   }
+
+   .ranking-title {
+  border-radius: 50px;
+  padding: 20px;
+  width: 160px;
+  color: rgb(4, 241, 123);
+  font-size: 20px;
+  text-align: center;
+  background: linear-gradient(#18acb1, #2a17bb);
+  opacity: 0.85;
+  display: block;
+  margin-left: 100px;
+  }
+
+  .show-ranking{
+  border-radius: 50px;
+  width: 300px;
+  height: 35px;
+  color: black;
+  font-size: 15px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 20px;
+  opacity: 0.85;
+
+  transition: all 0.3s ease 0s;
+  display: block;
+  margin-top: 20px;
+  padding: 20px;
+  padding-top: 5px;
+  text-align: center;
+  }
+
+  .show-ranking:hover {
+    background: linear-gradient(#c1faa4, #58ee6c);
+    color: black;
+    padding: 30px;
+  }
+
+  .average{
+  border-radius: 70px;
+  width: 200px;
+  line-height: 35px;
+  color: green;
+  font-size: 14px;
+  opacity: 0.85;
+  position:absolute;
+  top: 0px;
+  text-align: center;
+  margin-left: 100px;
+  margin-top: 40px;
+  }
+
+
+ }
