--- a/app/assets/stylesheets/scores/index.css.erb
+++ b/app/assets/stylesheets/scores/index.css.erb
@@ -72,58 +72,251 @@ body,html,main
 }
 
 .favorite-btn1 {
-  display: inline;
+  display: block;
   border-radius: 30px;
   color: black;
-  padding: 30px;
+  padding: 40px 100px;
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 50px;
+  margin-left: 20px;
   opacity: 0.85;
   cursor: pointer;
   transition: all 0.5s ease 0s;
+  margin-bottom:15px;
 }
   
 .favorite-btn1:hover {
   background: linear-gradient(#c1faa4, #58ee6c);
   color: black;
-  padding: 50px;
+  padding: 40px 100px;
 }
 
 .favorite-btn2 {
-  display: inline;
+  display: block;
   border-radius: 30px;
   color: black;
-  padding: 30px 10px;
+  padding: 40px 90px;
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 50px;
+  margin-left: 20px;
   opacity: 0.85;
   cursor: pointer;
   transition: all 0.5s ease 0s;
+  margin-bottom:15px;
 }
 
 .favorite-btn2:hover {
   background: linear-gradient(#c1faa4, #58ee6c);
   color: black;
-  padding: 50px;
+  padding: 40px 90px;
 }
 
 .favorite-btn3 {
-  display: inline;
+  display: block;
   border-radius: 30px;
   color: black;
-  padding: 30px 10px;
+  padding: 40px 90px;
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 50px;
+  margin-left: 20px;
   opacity: 0.85;
   cursor: pointer;
   transition: all 0.5s ease 0s;
+  margin-bottom:15px;
 }
 
 .favorite-btn3:hover {
   background: linear-gradient(#c1faa4, #58ee6c);
   color: black;
-  padding: 50px;
+  padding: 40px 90px;
 }
+
+/* タブレット表示時 */
+@media (max-width: 1024px) {
+  .main-text0 {
+  font-size: 60px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  border-radius: 70px;
+  text-align: center;
+  color: white;
+  text-shadow: white;
+  opacity: 0.8;
+  margin-bottom: 50px;
+  padding: 20px;
+}
+
+.main-text1 {
+  font-size: 60px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  border-radius: 50px;
+  text-align: center;
+  color: grey;
+  text-shadow: grey;
+  margin-bottom: 50px;
+  padding: 20px;
+}
+
+.main-text2 {
+  text-align: center;
+  font-size: 30px;
+  border-radius: 50px;
+  color: white;
+  text-shadow: black;
+  opacity: 0.7;
+  margin-top: 300px;
+}
+
+.text-box1 {
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  padding: 100px;
+  width: 600px;
+  font-size: 50px;
+  border-radius: 50px;
+  opacity: 0.75;
+}
+
+.favorite-btn1 {
+  display:block;
+  width:240px;
+  border-radius: 30px;
+  color: black;
+  padding: 90px 30px;
+  font-size: 16px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 50px;
+  opacity: 0.85;
+  transition: all 0.5s ease 0s;
+  text-align: center;
+}
+  
+.favorite-btn1:hover {
+  background: linear-gradient(#c1faa4, #58ee6c);
+  color: black;
+   padding: 100px 30px;
+}
+
+.favorite-btn2 {
+  display:block;
+  width:300px;
+  border-radius: 30px;
+  color: black;
+  padding: 90px 0px;
+  font-size: 16px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 50px;
+  opacity: 0.85;
+  transition: all 0.5s ease 0s;
+  text-align: center;
+}
+
+.favorite-btn2:hover {
+  background: linear-gradient(#c1faa4, #58ee6c);
+  color: black;
+  padding: 100px 0px;
+}
+
+.favorite-btn3 {
+  display:block;
+  width:300px;
+  border-radius: 30px;
+  color: black;
+  padding: 90px 0px;
+  font-size: 16px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 50px;
+  opacity: 0.85;
+  transition: all 0.5s ease 0s;
+  text-align: center;
+}
+
+.favorite-btn3:hover {
+  background: linear-gradient(#c1faa4, #58ee6c);
+  color: black;
+   padding: 100px 0px;
+}
+
+
+
+}
+
+ /* スマホ表示時 */
+@media (max-width: 599px) {
+
+  .fixed-bg {
+  background-size: cover !important; 
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.main-text0 {
+  font-size: 20px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  border-radius: 20px;
+  text-align: center;
+  color: white;
+  text-shadow: white;
+  opacity: 0.7;
+  margin-bottom: 20px;
+}
+
+.main-text1 {
+  font-size: 20px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  border-radius: 20px;
+  text-align: center;
+  color: grey;
+  text-shadow: grey;
+  margin-bottom: 20px;
+}
+
+.main-text2 {
+  text-align: center;
+  font-size: 20px;
+  border-radius: 20px;
+  color: white;
+  text-shadow: black;
+  opacity: 0.7;
+  margin-top: 50px;
+}
+
+.text-box1 {
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  width: 170px;
+  font-size: 25px;
+  border-radius: 10px;
+  opacity: 0.7;
+}
+
+
+.favorite-btn1 {
+ display:block;
+  border-radius: 10px;
+  color: black;
+  font-size: 16px;
+  margin-bottom:15px;
+  padding: 10px 40px;
+  margin-left: 40px;
+}
+
+.favorite-btn2 {
+  display:block;
+  border-radius: 10px;
+  color: black;
+  font-size: 16px;
+  padding: 10px;
+  margin-bottom:15px;
+  margin-left: 40px;
+}
+
+.favorite-btn3 {
+  display:block;
+  border-radius: 10px;
+  color: black;
+  font-size: 16px;
+   margin-bottom:15px;
+   padding: 10px;
+   margin-left: 40px;
+}
+
+ }
