--- a/app/assets/stylesheets/scores/new.css.erb
+++ b/app/assets/stylesheets/scores/new.css.erb
@@ -73,12 +73,6 @@ div.is-visible {
    color: white;
 }
 
-.result {
-  display: none;
-  color: white;
-  height: 10vh
-}
-
 .screen {
   
   margin: 32px auto;
@@ -113,15 +107,50 @@ div.is-visible {
   padding: 10px;
 }
 
+.result {
+  display: none;
+  color: white;
+  height: 10vh
+}
+
+.checkscore{
+  text-align: center;
+  border-radius: 20px;
+  background: linear-gradient(#d6dadb, #434546);
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  margin-top: 150px;
+  padding: 50px 70px;
+  margin-bottom: 30px;
+}
+
+.btncommentary{
+  text-align: center;
+  border-radius: 20px;
+  background: linear-gradient(#d6dadb, #434546);
+  font-size: 18px;
+  color: white;
+  padding: 50px 70px;
+  transition: all 0.3s ease 0s;
+}
+
+.btncommentary:hover {
+  background: linear-gradient(#f8fdf5, #c2f5c9);
+  color: black;
+  padding: 60px;
+}
+
+
 .reset{
   display: inline;
   border-radius: 30px;
   color: black;
-  padding: 35px 70px;
+  padding: 35px 96px;
   border: 2.5px solid rgb(53, 52, 52);
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 105px;
+  
   opacity: 0.85;
   cursor: pointer;
   transition: all 0.5s ease 0s;
@@ -145,11 +174,11 @@ div.is-visible {
   display: inline;
   border-radius: 30px;
   color: black;
-  padding: 30px;
+  padding: 30px 50px;
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 130px;
-  margin-bottom: 20px;
+  margin-left: 245px;
+  margin-top: 50px;
   opacity: 0.85;
   cursor: pointer;
   transition: all 0.5s ease 0s;
@@ -168,67 +197,44 @@ div.is-visible {
   color: white;
 }
 
-.btncommentary{
-  text-align: center;
-  border-radius: 20px;
-  background: linear-gradient(#d6dadb, #434546);
-  font-size: 18px;
-  color: white;
-  padding: 50px 70px;
-  transition: all 0.3s ease 0s;
-}
-
-.btncommentary:hover {
-  background: linear-gradient(#f8fdf5, #c2f5c9);
-  color: black;
-  padding: 60px;
-}
-
-
-.checkscore{
-  text-align: center;
-  border-radius: 20px;
-  background: linear-gradient(#d6dadb, #434546);
-  font-size: 18px;
-  font-weight: bold;
-  color: white;
-  margin-top: 150px;
-  padding: 50px 70px;
-  margin-bottom: 30px;
-}
-
 .explaination1{
   margin-top: 12px;
-  border-radius: 20px;
+  border-radius: 50px;
   background: linear-gradient(#ebedf3, #6b6686);
   transition: all 0.3s ease 0s;
   color: black;
+  font-size: 20px;
+  padding: 25px 85px;
 }
 
 .explaination2{
   margin-top: 12px;
-  border-radius: 20px;
+  border-radius: 50px;
   background: linear-gradient(#ebedf3, #6b6686);
   transition: all 0.3s ease 0s;
   color: black;
   margin-bottom: 25px;
+  font-size: 20px;
+  padding: 25px 85px;
 }
 
 .explaination3{
   margin-top: 12px;
-  border-radius: 20px;
+  border-radius: 50px;
   background: linear-gradient(#ebedf3, #6b6686);
   transition: all 0.3s ease 0s;
   color: black;
   margin-bottom: 100px;
+  font-size: 20px;
   position:relative;
+  padding: 25px 85px;
 }
 
 .explain-title{
   border-radius: 100px;
   width: 600px;
   color: rgb(4, 241, 123);
-  font-size: 35px;
+  font-size: 40px;
   text-align: center;
   background: linear-gradient(#18acb1, #2a17bb);
   opacity: 0.85;
@@ -236,3 +242,193 @@ div.is-visible {
   margin-left: 55px;
   margin-bottom: 20px;
 }
+
+ /* スマホ表示時 */
+@media (max-width: 599px) {
+
+  *{
+  margin: 0px;
+  padding: 0px;
+  }
+
+  .all{
+  background-image: url(<%= asset_path('design15.png') %>);
+  background-size: cover !important; 
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.btnstart{
+  border-radius: 90px;
+  color: black;
+  margin-top: 130px;
+  padding: 70px;
+  font-size: 25px;
+  background: linear-gradient(#d6dadb, #434546);
+  opacity: 0.77;
+  text-align: center;
+  font-weight: bold;
+  transition: all 0.3s ease 0s;
+}
+
+.top{
+  height:53vh;
+  width: 100vw;
+}
+
+.game {
+  background-image: url(<%= asset_path('design15.png') %>);
+  background-size: cover !important; 
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.title{
+  font-size: 10px;
+  color: white;
+  
+}
+
+.text{
+  font-size: 18px;
+  padding: 10px 40px;
+  margin 10px 40px;
+  
+  color: white;
+}
+
+.reference{
+  font-size: 12px;
+  text-align: center;
+  color: white;
+  text-shadow: white;
+  opacity: 0.7;
+  margin-top:200px;
+}
+
+.questionChoice {
+  margin-top: 15px;
+  border-radius: 30px;
+  font-size: 25px;
+  width: 375px;
+  background: linear-gradient(#ebedf3, #6b6686);
+  transition: all 0.3s ease 0s;
+}
+
+
+.result {
+  background-image: url(<%= asset_path('design15.png') %>);
+  background-size: cover !important; 
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+  height:65vh;
+  width: 100vw;
+}
+
+.checkscore{
+  font-size: 12px;
+  font-weight: bold;
+  color: white;
+  margin-top: 150px;
+  padding: 20px 50px;
+  margin-bottom: 30px;
+  margin-left: 90px;
+  width: 30%;
+}
+
+.btncommentary{
+  text-align: center;
+  border-radius: 20px;
+  background: linear-gradient(#d6dadb, #434546);
+  font-size: 14px;
+  color: white;
+  padding: 30px 50px;
+  width: 30%;
+  margin-left: 90px;
+}
+
+
+
+.reset{
+  border-radius: 30px;
+  color: black;
+  border: 2.5px solid rgb(53, 52, 52);
+  font-size: 15px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+}
+
+.ranking{
+ 
+  border-radius: 30px;
+  color: black;
+  font-size: 15px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  margin-left: 74px;
+  
+}
+
+.ranking:hover {
+  background: linear-gradient(#c1faa4, #58ee6c);
+  color: black;
+  padding: 60px;
+}
+
+.commentary{
+  display: none;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+}
+
+
+
+.explaination1{
+  font-size: 15px;
+  margin-top: 8px;
+  border-radius: 20px;
+  background: linear-gradient(#ebedf3, #6b6686);
+  transition: all 0.3s ease 0s;
+  color: black;
+  padding: 25px 55px;
+}
+
+.explaination2{
+  font-size: 15px;
+  margin-top: 8px;
+  border-radius: 20px;
+  background: linear-gradient(#ebedf3, #6b6686);
+  transition: all 0.3s ease 0s;
+  color: black;
+  margin-bottom: 25px;
+  padding: 25px 55px;
+}
+
+.explaination3{
+  font-size: 15px;
+  margin-top: 8px;
+  border-radius: 20px;
+  background: linear-gradient(#ebedf3, #6b6686);
+  transition: all 0.3s ease 0s;
+  color: black;
+  margin-bottom: 100px;
+  position:relative;
+  padding: 25px 55px;
+}
+
+.explain-title{
+  border-radius: 80px;
+  width: 260px;
+  color: rgb(4, 241, 123);
+  font-size: 35px;
+  text-align: center;
+  background: linear-gradient(#18acb1, #2a17bb);
+  opacity: 0.85;
+  display: block;
+  margin-left: 70px;
+  margin-bottom: 20px;
+}
+
+ }
