--- a/app/assets/stylesheets/users/registration-session.css
+++ b/app/assets/stylesheets/users/registration-session.css
@@ -109,3 +109,72 @@
     color: black;
     padding: 20px;
   }
+
+ /* スマホ表示時 */
+ @media (max-width: 599px) {
+
+  .registration-main {
+    width: 100vw;
+    min-width: 800px;
+    height: 200vh;
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .form-wrap {
+    width: 50%;
+    background-color: white;
+    padding-bottom: 70px;
+  }
+  
+  .form-header {
+    width: 100%;
+    height: 120px;
+    text-align: center;
+    font-size: 15px;
+  }
+  
+  .register-btn {
+    width: 50%;
+    margin-left: 100px;
+    margin-top: 50px;
+  }
+  
+  .register-red-btn {
+    margin-left: 15px;
+    background: linear-gradient(#dcf4f5, #b2a9f8);
+    border-radius: 50px;
+    line-height: 48px;
+    font-size: 14px;
+    margin-bottom: 20px;
+    transition: all 0.5s ease 0s;
+  }
+
+  .register-red-btn:hover  {
+    background: linear-gradient(#c1faa4, #58ee6c);
+    color: black;
+    padding: 20px;
+  }
+
+  .login-btn {
+    width: 50%;
+    margin-left: 100px;
+    margin-top: 50px;
+  }
+
+  .new-register {
+    width: 141px;
+    background: linear-gradient(#dcf4f5, #b2a9f8);
+    border-radius: 50px;
+    height: 48px;
+    color: black;
+    font-size: 10px;
+    margin-left: 115px;
+    padding: 0px 30px;
+    text-align: center;
+    border: solid 2px rgb(97, 94, 94); 
+    transition: all 0.5s ease 0s;
+  }
+
+}
