レスポンシブ機能デザイン修正

--- a/app/assets/stylesheets/scores/new.css.erb
+++ b/app/assets/stylesheets/scores/new.css.erb
@@ -40,7 +40,6 @@ div.is-visible {
   text-align: center;
   font-weight: bold;
   transition: all 0.3s ease 0s;
-  
 }
 
 .top{
@@ -74,7 +73,6 @@ div.is-visible {
 }
 
 .screen {
-  
   margin: 32px auto;
   text-align: center;
   font-size: 30px;
@@ -150,7 +148,6 @@ div.is-visible {
   border: 2.5px solid rgb(53, 52, 52);
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  
   opacity: 0.85;
   cursor: pointer;
   transition: all 0.5s ease 0s;
@@ -294,8 +291,7 @@ div.is-visible {
 .text{
   font-size: 18px;
   padding: 10px 40px;
-  margin 10px 40px;
-  
+  margin: 10px 40px;
   color: white;
 }
 
@@ -317,14 +313,13 @@ div.is-visible {
   transition: all 0.3s ease 0s;
 }
 
-
 .result {
   background-image: url(<%= asset_path('design15.png') %>);
   background-size: cover !important; 
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
-  height:65vh;
+  height: 65vh;
   width: 100vw;
 }
 
@@ -430,5 +425,3 @@ div.is-visible {
   margin-left: 70px;
   margin-bottom: 20px;
 }
-
- }
