トップページデザイン修正

--- a/app/assets/stylesheets/scores/index.css.erb
+++ b/app/assets/stylesheets/scores/index.css.erb
@@ -54,7 +54,7 @@ body,html,main
 
 .text-box1 {
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  padding: 20px;
+  padding: 50px;
   width: 380px;
   font-size: 30px;
   border-radius: 30px;
@@ -76,13 +76,19 @@ body,html,main
   border-radius: 30px;
   color: black;
   padding: 40px 100px;
-  font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 20px;
-  opacity: 0.85;
+  margin-left: 15px;
+  opacity: 0.75;
   cursor: pointer;
   transition: all 0.5s ease 0s;
-  margin-bottom:15px;
+  margin-bottom:20px;
+ 
+  font-size:25px;
+	text-align:center;
+	line-height:0.95em;
+	font-weight:bold;
+	color: #FFF;
+	text-shadow: 0 0 0.2em rgba(0,0,0,1);
 }
   
 .favorite-btn1:hover {
@@ -96,13 +102,17 @@ body,html,main
   border-radius: 30px;
   color: black;
   padding: 40px 90px;
-  font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 20px;
-  opacity: 0.85;
-  cursor: pointer;
+  margin-left: 15px;
+  opacity: 0.75;
   transition: all 0.5s ease 0s;
-  margin-bottom:15px;
+  margin-bottom:20px;
+  font-size:25px;
+	text-align:center;
+	line-height:0.95em;
+	font-weight:bold;
+	color: #FFF;
+	text-shadow: 0 0 0.2em rgba(0,0,0,1);
 }
 
 .favorite-btn2:hover {
@@ -116,13 +126,18 @@ body,html,main
   border-radius: 30px;
   color: black;
   padding: 40px 90px;
-  font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 20px;
-  opacity: 0.85;
-  cursor: pointer;
+  margin-left: 15px;
+  opacity: 0.75;
   transition: all 0.5s ease 0s;
-  margin-bottom:15px;
+  margin-bottom:20px;
+  font-size:25px;
+	text-align:center;
+	line-height:0.95em;
+	font-weight:bold;
+	color: #FFF;
+	text-shadow: 0 0 0.2em rgba(0,0,0,1);
+ 
 }
 
 .favorite-btn3:hover {
@@ -187,7 +202,8 @@ body,html,main
   font-size: 16px;
   margin-bottom:15px;
   padding: 10px 40px;
-  margin-left: 40px;
+  margin-left: 15px;
+  text-align: center;
 }
 
 .favorite-btn2 {
@@ -197,7 +213,8 @@ body,html,main
   font-size: 16px;
   padding: 10px;
   margin-bottom:15px;
-  margin-left: 40px;
+  margin-left: 15px;
+  text-align: center;
 }
 
 .favorite-btn3 {
@@ -207,7 +224,8 @@ body,html,main
   font-size: 16px;
    margin-bottom:15px;
    padding: 10px;
-   margin-left: 40px;
+   margin-left: 15px;
+   text-align: center;
 }
 
 }
