--- a/app/assets/stylesheets/scores/new.css.erb
+++ b/app/assets/stylesheets/scores/new.css.erb
@@ -67,9 +67,30 @@ div.is-visible {
   color: white;
 }
 
-.text{
-  font-size: 40px;
-   color: white;
+.text {
+  position: relative;
+  border-top: solid 2px #80c8d1;
+  border-bottom: solid 2px #80c8d1;
+  background: #f4f4f4;
+  line-height: 1.4;
+  padding: 0.4em 0.5em;
+  margin: 2em 0 0.5em;
+}
+
+.text:after {
+  position: absolute;
+  font-family: "Font Awesome 5 Free",'Quicksand','Avenir','Arial',sans-serif;
+  font-weight: 900;
+  content: '\f0a7\ QUESTION';
+  background: #80c8d1;
+  color: #fff;
+  left: 0px;
+  bottom: 100%;
+  border-radius: 5px 5px 0 0;
+  padding: 5px 7px 3px;
+  font-size: 0.7em;
+  line-height: 1;
+  letter-spacing: 0.05em;
 }
 
 .screen {
@@ -171,10 +192,10 @@ div.is-visible {
   display: inline;
   border-radius: 30px;
   color: black;
-  padding: 30px 50px;
+  padding: 30px 140px;
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 200px;
+  margin-left: 90px;
   margin-top: 50px;
   opacity: 0.85;
   cursor: pointer;
@@ -184,7 +205,7 @@ div.is-visible {
 .ranking:hover {
   background: linear-gradient(#c1faa4, #58ee6c);
   color: black;
-  padding: 60px;
+  padding: 30px 140px;
 }
 
 .commentary{
@@ -193,38 +214,23 @@ div.is-visible {
   justify-content: space-between;
   color: white;
 }
-
-.explaination1{
-  margin-top: 12px;
-  border-radius: 50px;
-  background: linear-gradient(#ebedf3, #6b6686);
-  transition: all 0.3s ease 0s;
-  color: black;
-  font-size: 20px;
-  padding: 25px 85px;
+.mistaken-question{
+  border-radius: 100px;
+  width: 600px;
+  color: rgb(4, 241, 123);
+  font-size: 40px;
+  text-align: center;
+  background: linear-gradient(#18acb1, #2a17bb);
+  opacity: 0.85;
+  display: block;
 }
 
-.explaination2{
-  margin-top: 12px;
-  border-radius: 50px;
-  background: linear-gradient(#ebedf3, #6b6686);
-  transition: all 0.3s ease 0s;
-  color: black;
-  margin-bottom: 25px;
-  font-size: 20px;
-  padding: 25px 85px;
-}
-
-.explaination3{
-  margin-top: 12px;
-  border-radius: 50px;
-  background: linear-gradient(#ebedf3, #6b6686);
-  transition: all 0.3s ease 0s;
-  color: black;
-  margin-bottom: 100px;
-  font-size: 20px;
-  position:relative;
-  padding: 25px 85px;
+.explained-message{
+  font-size: 15px;
+  background: linear-gradient(#bbf5f7, #ada3f7);
+  margin-bottom: 20px;
+  padding: 20px 20px;
+  color:black;
 }
 
 .explain-title{
@@ -236,8 +242,15 @@ div.is-visible {
   background: linear-gradient(#18acb1, #2a17bb);
   opacity: 0.85;
   display: block;
-  margin-left: 55px;
+  margin-top: 100px;
+}
+
+.explained-question{
+  font-size: 15px;
+  background: linear-gradient(#55ecf1, #c6e9f0);
   margin-bottom: 20px;
+  padding: 20px 20px;
+  color:black;
 }
 
 
@@ -292,7 +305,7 @@ div.is-visible {
   font-size: 18px;
   padding: 10px 40px;
   margin: 10px 40px;
-  color: white;
+  color: black;
 }
 
 .reference{
@@ -357,18 +370,15 @@ div.is-visible {
 
 .ranking{
  
+  display: inline;
   border-radius: 30px;
   color: black;
+  padding: 30px 60px;
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 74px;
-  
-}
-
-.ranking:hover {
-  background: linear-gradient(#c1faa4, #58ee6c);
-  color: black;
-  padding: 60px;
+  margin-left: 50px;
+  margin-top: 50px;
+  opacity: 0.85;
 }
 
 .commentary{
@@ -378,50 +388,45 @@ div.is-visible {
   color: white;
 }
 
-
-
-.explaination1{
-  font-size: 15px;
-  margin-top: 8px;
-  border-radius: 20px;
-  background: linear-gradient(#ebedf3, #6b6686);
-  transition: all 0.3s ease 0s;
-  color: black;
-  padding: 25px 55px;
-}
-
-.explaination2{
-  font-size: 15px;
-  margin-top: 8px;
-  border-radius: 20px;
-  background: linear-gradient(#ebedf3, #6b6686);
-  transition: all 0.3s ease 0s;
-  color: black;
-  margin-bottom: 25px;
-  padding: 25px 55px;
-}
-
-.explaination3{
-  font-size: 15px;
-  margin-top: 8px;
-  border-radius: 20px;
-  background: linear-gradient(#ebedf3, #6b6686);
-  transition: all 0.3s ease 0s;
-  color: black;
-  margin-bottom: 100px;
-  position:relative;
-  padding: 25px 55px;
-}
-
-.explain-title{
-  border-radius: 80px;
-  width: 260px;
+.mistaken-question{
+  border-radius: 50px;
+  width: 250px;
   color: rgb(4, 241, 123);
-  font-size: 35px;
+  font-size: 20px;
   text-align: center;
   background: linear-gradient(#18acb1, #2a17bb);
   opacity: 0.85;
   display: block;
-  margin-left: 70px;
-  margin-bottom: 20px;
+  margin-left: 50px;
+}
+
+.explained-message{
+  font-size: 12px;
+  background: linear-gradient(#bbf5f7, #ada3f7);
+  margin-bottom: 15px;
+  padding: 20px 20px;
+  color:black;
+}
+
+.explain-title{
+  border-radius: 50px;
+  width: 250px;
+  color: rgb(4, 241, 123);
+  font-size: 20px;
+  text-align: center;
+  background: linear-gradient(#18acb1, #2a17bb);
+  opacity: 0.85;
+  display: block;
+  margin-top: 100px;
+  margin-left: 50px;
+}
+
+.explained-question{
+  font-size: 12px;
+  background: linear-gradient(#bbf5f7, #ada3f7);
+  margin-bottom: 15px;
+  padding: 20px 20px;
+  color:black;
+}
+
 }
