--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -18,10 +18,10 @@
 
     <div id="sceneCommentary" class="commentary screen">
   
-    <p class="mistaken-question">間違えた問題</p>
+    <div class="mistaken-question">間違えた問題</div>
     <ul id="textQuestion2"></ul> 
 
-    <p class="explain-title">解説</p>
+    <div class="explain-title">解説</div>
     <ul id="explainedQuestion"></ul>
 
        <!--<p class="reset" id="btnReset">もう一度</p>-->
