--- a/app/assets/stylesheets/scores/all.css.erb
+++ b/app/assets/stylesheets/scores/all.css.erb
@@ -15,40 +15,77 @@
     background-color: black;
   }
 
+  .ranking-wrap {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .ranking-title {
   border-radius: 100px;
-  width: 600px;
+  width: 300px;
+  height: 100px;
   color: rgb(4, 241, 123);
-  font-size: 35px;
+  font-size: 30px;
+  font-weight: bold;
   text-align: center;
   background: linear-gradient(#18acb1, #2a17bb);
   opacity: 0.85;
   display: block;
-  margin-left: 400px;
   }
 
-  .show-ranking{
+  .allranking{
+    display: block;
+  }
+
+  .allranking-title{
+   border-radius: 30px;
+   font-size: 20px;
+   background: linear-gradient(#dcf4f5, #b2a9f8);
+  }
+
+  .show-allranking{
   border-radius: 50px;
-  width: 300px;
-  height: 35px;
+  width: 400px;
+  height: 50px;
   color: black;
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 500px;
   opacity: 0.85;
-
-  transition: all 0.3s ease 0s;
   display: block;
-  margin-top: 20px;
-  padding: 20px;
-  padding-top: 5px;
   text-align: center;
+  margin-bottom: 15px;
   }
 
-  .show-ranking:hover {
-    background: linear-gradient(#c1faa4, #58ee6c);
-    color: black;
-    padding: 30px;
+.weeklyranking-title{
+  border-radius: 30px;
+  font-size: 20px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+}
+
+.weeklyranking{
+    display: block;
+  }
+
+  .score-color{
+    color: rgb(245, 209, 4);
+    font-size: 18px;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px black; 
+    
+  }
+
+.show-weeklyranking{
+  border-radius: 50px;
+  width: 400px;
+  height: 50px;
+  color: black;
+  font-size: 15px;
+  background: linear-gradient(#dcf4f5, #b2a9f8);
+  opacity: 0.85;
+  display: block;
+  text-align: center;
+  margin-bottom: 15px;
+  margin-right: 200px;
   }
 
   .average{
@@ -61,8 +98,8 @@
   position:absolute;
   top: 0px;
   text-align: center;
-  margin-left: 750px;
-  margin-top: 10px;
+  margin-left: 50px;
+  margin-top: 45px;
   }
 
 @media (max-width: 599px) {
