--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,30 +3,30 @@
 <div class='form-wrap'>
   <div class='form-header'>
     <h1 class='form-header-text'>
-      中国語文法・語法<br>ログイン情報
+      中国語文法・語法<br>新規登録
     </h1>
   </div>
   
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">ニックネーム</label>
-      <span>必須</span>
+      <label class="form-text"></label>
     </div>
-    <%= f.text_area :nickname, class:"input-default", id:"nickname", autofocus: true%>
+    <%= f.label :nickname %><br />
+    <%= f.text_area :nickname, class:"input-default", autofocus: true%>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">メールアドレス</label>
-      <span>必須</span>
+      <label class="form-text"></label>
     </div>
-    <%= f.email_field :email, class:"input-default", id:"email", autofocus: true %>
+    <%= f.label :email %><br />
+    <%= f.email_field :email, class:"input-default", autofocus: true %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">パスワード</label>
-      <span>必須</span>
+      <label class="form-text"></label>
     </div>
-    <%= f.password_field :password, class:"input-default", id:"password"%>
+    <%= f.label :password %><br />
+    <%= f.password_field :password, class:"input-default"%>
     <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
   </div>
   
