--- a/app/assets/stylesheets/posts/posts.css.erb
+++ b/app/assets/stylesheets/posts/posts.css.erb
@@ -1,7 +1,7 @@
 .post{
   height: 100px;
   width: 600px;
-  margin-top: 20px;
+  margin-bottom: 20px;
   margin-left: 400px;
   border-radius: 30px;
   color: black;
@@ -26,15 +26,27 @@
   }
 
   .box{
-    height: 50px;
-    width:300px; 
+    background: #e8f3f3;
+    top: 32px;
+    left: 32px;
+    position: fixed;
+    color:black;
+    height: 70px;
+    width:350px;
     border-radius: 20px;
+    font-size: 20px;
   }
 
-  .search-input{
+  .submit{
+    background: #e8f3f3;
+    top: 104px;
+    left: 60px;
+    position: fixed;
+    color:black;
     height: 50px;
     width:300px;
     border-radius: 20px;
+    font-size: 20px;
   }
 
 @media (max-width: 599px) {
@@ -69,13 +81,6 @@
   .box{
     height: 50px;
     width:180px; 
-    border-radius: 20px;
-    margin-left: 40px;
-  }
-
-  .search-input{
-    height: 50px;
-    width:180px;
     border-radius: 20px;
     margin-left: 40px;
   }
