--- a/app/assets/stylesheets/scores/new.css.erb
+++ b/app/assets/stylesheets/scores/new.css.erb
@@ -185,17 +185,16 @@ div.is-visible {
 }
 
 .ranking{
-  display: inline;
+  
   border-radius: 30px;
   color: black;
-  padding: 30px 140px;
+  padding: 70px 70px;
   font-size: 15px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  margin-left: 90px;
-  margin-top: 50px;
   opacity: 0.85;
-  cursor: pointer;
-  transition: all 0.5s ease 0s;
+  position: fixed;
+  top: 30px;
+  right: 40px;
 }
 
 .ranking:hover {
@@ -209,43 +208,62 @@ div.is-visible {
   justify-content: space-between;
   color: white;
 }
+
+.last_page{
+ /*display:flex;
+ justify-content: center;*/
+}
+
+.mistake{
+ margin-bottom:100px;
+ 
+}
+
 .mistaken-question{
   border-radius: 100px;
-  width: 600px;
+  width: 400px;
   color: rgb(4, 241, 123);
   font-size: 40px;
   text-align: center;
   background: linear-gradient(#18acb1, #2a17bb);
   opacity: 0.85;
   display: block;
+  position: absolute;
+  left: 30px;
 }
 
+
 .explained-message{
+  font-size: 15px;
+  background: linear-gradient(#f7c7e7, #f895da);
+  margin-bottom: 20px;
+  padding: 20px 20px;
+  color:black;
+  width: 600px;
+  margin-left: 100px;
+}
+
+.explain-title{
+  border-radius: 100px;
+  width: 400px;
+  color: rgb(5, 5, 5);
+  font-size: 40px;
+  text-align: center;
+  background: linear-gradient(#f88c8c, #ff0000);
+  opacity: 0.85;
+  display: block;
+  position: absolute;
+  left: 30px;
+}
+
+.explained-question{
   font-size: 15px;
   background: linear-gradient(#bbf5f7, #ada3f7);
   margin-bottom: 20px;
   padding: 20px 20px;
   color:black;
-}
-
-.explain-title{
-  border-radius: 100px;
   width: 600px;
-  color: rgb(4, 241, 123);
-  font-size: 40px;
-  text-align: center;
-  background: linear-gradient(#18acb1, #2a17bb);
-  opacity: 0.85;
-  display: block;
-  margin-top: 100px;
-}
-
-.explained-question{
-  font-size: 15px;
-  background: linear-gradient(#55ecf1, #c6e9f0);
-  margin-bottom: 20px;
-  padding: 20px 20px;
-  color:black;
+  margin-left: 100px;
 }
 
 
