--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 <div class='form-wrap'>
   <div class='form-header'>
     <h1 class='form-header-text'>
-      中国語文法・語法<br>ログイン情報
+      中国語文法・語法<br>ユーザー登録
     </h1>
   </div>
 
