いいね機能追加

--- a/app/assets/stylesheets/scores/index.css.erb
+++ b/app/assets/stylesheets/scores/index.css.erb
@@ -2,11 +2,11 @@
   margin: 0px;
   padding: 0px;
   }
-  
 
 body,html,main
 {
   height: 100%;
+  
 }
 
 .fixed-bg {
@@ -25,7 +25,7 @@ body,html,main
 .main-text0 {
   font-size: 50px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  border-radius: 50px;
+  
   text-align: center;
   color: white;
   text-shadow: white;
@@ -36,7 +36,7 @@ body,html,main
 .main-text1 {
   font-size: 50px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
-  border-radius: 50px;
+  
   text-align: center;
   color: grey;
   text-shadow: grey;
@@ -60,11 +60,15 @@ body,html,main
   background-image: url(<%= asset_path('design13.png') %>);
 }
 
+.fixed-bg bg-3{
+  display: block;
+}
+
 .favorite-btn1 {
   display: block;
   border-radius: 30px;
   color: black;
-  padding: 40px 100px;
+  padding: 40px 180px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
   margin-left: 15px;
   opacity: 0.75;
@@ -72,7 +76,7 @@ body,html,main
   transition: all 0.5s ease 0s;
   margin-bottom:20px;
  
-  font-size:25px;
+  font-size:27px;
 	text-align:center;
 	line-height:0.95em;
 	font-weight:bold;
@@ -89,13 +93,13 @@ body,html,main
   display: block;
   border-radius: 30px;
   color: black;
-  padding: 40px 90px;
+  padding: 40px 170px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
   margin-left: 15px;
   opacity: 0.75;
   transition: all 0.5s ease 0s;
   margin-bottom:20px;
-  font-size:25px;
+  font-size:27px;
 	text-align:center;
 	line-height:0.95em;
 	font-weight:bold;
@@ -112,13 +116,13 @@ body,html,main
   display: block;
   border-radius: 30px;
   color: black;
-  padding: 40px 90px;
+  padding: 40px 170px;
   background: linear-gradient(#dcf4f5, #b2a9f8);
   margin-left: 15px;
   opacity: 0.75;
   transition: all 0.5s ease 0s;
   margin-bottom:20px;
-  font-size:25px;
+  font-size:27px;
 	text-align:center;
 	line-height:0.95em;
 	font-weight:bold;
@@ -130,6 +134,10 @@ body,html,main
 .favorite-btn3:hover {
   background: linear-gradient(#c1faa4, #58ee6c);
   color: black;
+}
+
+.fa{
+    display: block !important;
 }
 
 @media (max-width: 599px) {
