--- a/app/assets/stylesheets/posts/posts.css.erb
+++ b/app/assets/stylesheets/posts/posts.css.erb
@@ -49,6 +49,47 @@
     font-size: 20px;
   }
 
+  .like-link {
+    text-decoration: none;
+
+  }
+  
+  .like-btn {
+    font-size: 35px;
+    color: #0c95f1;
+    transition: 2.0s ;
+  }
+
+  .like-btn:hover {
+    background: linear-gradient(#f8f5f7, #6ac2f5);
+    border-radius: 50px;
+    padding: 0px 200px;
+  }
+
+  .caption {
+    font-size:		16px;
+    color:			rgb(11, 15, 241);
+    text-align: 		center;
+    padding-top:		20px;
+  }
+
+  .mask {
+    height: 100px;
+    width: 200px;
+    opacity:		0;	/* 表示させない */
+    -webkit-transition:	all 1.6s ease;
+    transition:		all 1.6s ease;
+
+  }
+   .mask:hover {
+    height: 50px;
+    width: 250px;
+    opacity:		1;	/* ホバーで表示する */
+    background: linear-gradient(#f7f5f6, #6eb6fa);
+    border-radius: 50px;
+    margin-top: 70px;
+    
+
 @media (max-width: 599px) {
 
   .post{
