--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,6 +33,7 @@
     </div>
     <%= f.password_field :password, class:"input-default", id:"password"%>
     <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
+    <p class='info-text'>※6文字以上で入力してください</p>
   </div>
   
   <div class='register-btn'>
